Repositories + Tables Created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=api
+spring.flyway.repair=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/techrally
+spring.datasource.username=postgres
+spring.datasource.password=qpads95
