--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
     		<groupId>org.flywaydb</groupId>
     		<artifactId>flyway-database-postgresql</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>com.amazonaws</groupId>
+    		<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.788</version>
+		</dependency>
 	</dependencies>
 
 	<build>
