--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=api
-spring.flyway.repair=true
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/techrally
-spring.datasource.username=postgres
+spring.datasource.username=planetaryy
 spring.datasource.password=qpads95
+aws.region=eu-north-1
+aws.bucket.name=techrally-images
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
